@@ -1,8 +1,18 @@
 --- CHANGELOG ---
 
 --- Assimulo-b1.02 ---
-    * Added support for user-defined Jacobians when using CVode
-    * Added support for user-defined Jacobians when using IDA
+    * Added a plotting functionality for plotting the step-size used
+      together with the order used when the simulation have been
+      run with one-step mode in either CVode or IDA.
+    * Added so that when using IDA or CVode in one-step mode, the 
+      current order and the last order are stored.
+    * Added option to specify initial step-size in CVode.
+    * Added support to switch between using the user defined jacobian
+      in CVode or not.
+    * Added support to switch between using the user defined jacobian
+      in CVode or not.
+    * Added support for user-defined Jacobians when using CVode.
+    * Added support for user-defined Jacobians when using IDA.
 
 --- Assimulo-b1.01 ---
     * The rough first version.
